--- a/index.html
+++ b/index.html
@@ -1,1 +1,76 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Galeria de Fotos</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <!-- Cabeçalho -->
+    <header>
+        <h1>MINHAS MEMÓRIAS DA ROBÓTICA</h1>
+        <nav>
+            <button onclick="scrollToSection('fotos')">Fotos</button>
+            <button onclick="scrollToSection('conclusao')">Conclusão</button>
+        </nav>
+    </header>
 
+    <!-- Seção de fotos -->
+    <section id="fotos" class="gallery-section">
+        <div class="gallery">
+            <div class="photo-card">
+                <img src="Site.Alex.0.png" alt="Foto 1">
+                <h2>Primeira competição de Robótica que participo, onde ficamos em 6°Lugar e ganhamos vaga para o Nacional</h2>
+                <p>Data: 26/11/2022</p>
+            </div>
+            <div class="photo-card">
+                <img src="Site.Alex.2.jpg" alt="Foto 2">
+                <h2>Primeiro nacional que participo, onde viajamos para Brasília-DF e competimos no estádio Manné Garrincha</h2>
+                <p>Data: 16/03/2023</p>
+            </div>
+            <div class="photo-card">
+                <img src="Site.Alex.3.jpg" alt="Foto 3">
+                <h2>Primeiro estadual de OBR que competi, onde ficamos em 2°Lugar e ganhamos vaga para o Nacional</h2>
+                <p>Data: 22/11/2022</p>
+            </div>
+            <div class="photo-card">
+                <img src="Site.Alex.4.jpg" alt="Foto 4">
+                <h2>Primeiro Nacional de OBR que participei, onde viajamos para Salvador-BA e ganhamos prêmio de inovação</h2>
+                <p>Data: 25/03/2023</p>
+            </div>
+            <div class="photo-card">
+                <img src="Site.Alex.5.jpg" alt="Foto 5">
+                <h2>Primeiro Nacional de FRC que participo, onde fui mentor de uma equipe de FLL junto e competimos em Brasília-DF</h2>
+                <p>Data: 24/02/2024</p>
+            </div>
+            <div class="photo-card">
+                <img src="Site.Alex.6.jpg" alt="Foto 6">
+                <h2>Segunda competição quevou como mentor de uma equipe de FLL a Manna Doctors Machines e ficamos em 2°Lugar</h2>
+                <p>Data: 11/10/2024</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Conclusão -->
+    <section id="conclusao" class="conclusion-section">
+        <div class="thanks-box">
+            <h2>Agradecimento</h2>
+            <p>
+                Bom esses últimos anos que participei na robótica foram incríveis
+            </p>
+        </div>
+    </section>
+
+    <!-- Rodapé -->
+    <footer>
+        <p>&copy; Colégio Estadual Padre Cláudio Morelli - Alex Victor dos Santos Horing - N°03 - 3°E</p>
+    </footer>
+
+    <script>
+        function scrollToSection(id) {
+            document.getElementById(id).scrollIntoView({ behavior: 'smooth' });
+        }
+    </script>
+</body>
+</html>
