--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section id="fotos" class="gallery-section">
         <div class="gallery">
             <div class="photo-card">
-                <img src="Site.Maria.1.png" alt="Foto 1">
+                <img src="IMG-20241020-WA0008.jpg" alt="Foto 1">
                 <h2></h2>
                 <p>Data: 26/11/2022</p>
             </div>
