--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p>Data: 26/11/2022</p>
             </div>
             <div class="photo-card">
-                <img src="Site.Maria.2.jpg" alt="Foto 2">
+                <img src="IMG-20240724-WA0010.jpg" alt="Foto 2">
                 <h2></h2>
                 <p>Data: 16/03/2023</p>
             </div>
