--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p>Data: 16/03/2023</p>
             </div>
             <div class="photo-card">
-                <img src="Site.Maria.3.jpg" alt="Foto 3">
+                <img src="IMG-20241020-WA0013.jpg" alt="Foto 3">
                 <h2></h2>
                 <p>Data: 22/11/2022</p>
             </div>
