--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <p>Data: 22/11/2022</p>
             </div>
             <div class="photo-card">
-                <img src="Site.Maria.4.jpg" alt="Foto 4">
+                <img src="IMG-20241020-WA0014.jpg" alt="Foto 4">
                 <h2></h2>
                 <p>Data: 25/03/2023</p>
             </div>
