--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <p>Data: 25/03/2023</p>
             </div>
             <div class="photo-card">
-                <img src="Site.Maria.5.jpg" alt="Foto 5">
+                <img src="IMG-20241022-WA0002.jpg" alt="Foto 5">
                 <h2></h2>
                 <p>Data: 24/02/2024</p>
             </div>
