--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <p>Data: 24/02/2024</p>
             </div>
             <div class="photo-card">
-                <img src="Site.Maria.6.jpg" alt="Foto 6">
+                <img src="IMG-20241022-WA0003.jpg" alt="Foto 6">
                 <h2></h2>
                 <p>Data: 11/10/2024</p>
             </div>
