--- a/index.html
+++ b/index.html
@@ -49,6 +49,52 @@
                 <h2></h2>
                 <p>Data: 11/10/2024</p>
             </div>
+            <div class="photo-card">
+                <img src="IMG-20240724-WA0010.jpg" alt="Foto 2">
+                <h2></h2>
+                <p>Data: 16/03/2023</p>
+            </div>
+            <div class="photo-card">
+                <img src="IMG-20240724-WA0010.jpg" alt="Foto 2">
+                <h2></h2>
+                <p>Data: 16/03/2023</p>
+            </div>
+            <div class="photo-card">
+                <img src="IMG-20240724-WA0010.jpg" alt="Foto 2">
+                <h2></h2>
+                <p>Data: 16/03/2023</p>
+            </div>
+            <div class="photo-card">
+                <img src="IMG-20240724-WA0010.jpg" alt="Foto 2">
+                <h2></h2>
+                <p>Data: 16/03/2023</p>
+            </div>
+            <div class="photo-card">
+                <img src="IMG-20240724-WA0010.jpg" alt="Foto 2">
+                <h2></h2>
+                <p>Data: 16/03/2023</p>
+            </div>
+            <div class="photo-card">
+                <img src="IMG-20240724-WA0010.jpg" alt="Foto 2">
+                <h2></h2>
+                <p>Data: 16/03/2023</p>
+            </div>
+            <div class="photo-card">
+                <img src="IMG-20240724-WA0010.jpg" alt="Foto 2">
+                <h2></h2>
+                <p>Data: 16/03/2023</p>
+            </div>
+            <div class="photo-card">
+                <img src="IMG-20240724-WA0010.jpg" alt="Foto 2">
+                <h2></h2>
+                <p>Data: 16/03/2023</p>
+            </div>
+            <div class="photo-card">
+                <img src="IMG-20240724-WA0010.jpg" alt="Foto 2">
+                <h2></h2>
+                <p>Data: 16/03/2023</p>
+            </div>
+        
         </div>
     </section>
 
